# esphome-tailscale

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md  example-dev.yaml  example.yaml
.github/workflows/: check-microlink-update.yml  codeql.yml
components/tailscale/: __init__.py  binary_sensor.py  patch_cmake.py  sensor.py  switch.py  tailscale.cpp  tailscale.h  text.py  text_sensor.py
contrib/headscale-test/: README.md
contrib/headscale-test/config/: config.yaml
idf_components/microlink/: CMakeLists.txt  ml_config_override.h
idf_components/wireguard_lwip/src/: lwip_compat.h  wireguard-platform-esp32.c  wireguard-platform.h  wireguard.h  wireguardif.c  wireguardif.h
microlink/components/microlink/components/wireguard_lwip/src/: wireguardif.c
microlink/components/microlink/include/: microlink.h  microlink_internal.h
microlink/components/microlink/src/: microlink.c  ml_coord.c  ml_derp.c  ml_net_io.c  ml_tcp.c  ml_udp.c  ml_wg_mgr.c
scripts/: capture_web_esphome.py  mask_screenshots.py
